/* 
  Localizable.strings
  Think - ENGLISH

  Created by Tony Gorez on 16/07/2021.
  
*/

"baseline" = "Compose as you think!";

/**
 
 LIST VIEW
 
 */

"ListView.title" = "Your sounds";
"ListView.subtitle" = "Select one to edit it";
"ListView.fallback" = "No sound available";

// MODAL
"ListView.creationModal.formLabel" = "Create a new sound";
"ListView.creationModal.titlePlaceholder" = "Title";
"ListView.creationModal.descriptionPlaceholder" = "Description";
"ListView.creationModal.saveButtonLabel" = "Create";

/**
 
 RECORD VIEW
 
 */

// MODAL
"SoundView.editionModal.formLabel" = "Sound information";
"SoundView.editionModal.titlePlaceholder" = "Title";
"SoundView.editionModal.descriptionPlaceholder" = "Description";
"SoundView.editionModal.saveButtonLabel" = "Save";
