...
                        SubTitle(Label: self.subtitle)
                    }
                    Button(action: self.action) {
                        Image(systemName: self.actionIconName)
                    }
                    .foregroundColor(Color("NavigationBarColor"))
                    .accessibilityIdentifier("Add")
                    .padding()
                    .font(/*@START_MENU_TOKEN@*/.title/*@END_MENU_TOKEN@*/)
                }
            )
            .padding(.horizontal)
        }
...
